<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CampusConnect</string>
    <string name="content_description_logo">Department Logo</string>
    <string name="subtitle_text">Department of Industrial Management\nUniversity of Kelaniya</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="register_text">Don\'t have an account? Register</string>
    <string name="title_create_account">Create Account</string>
    <string name="dept_name">Department of Industrial Management</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="btn_register">REGISTER</string>
    <string name="back_to_login">Already have an account? Login</string>
    <string name="home_title">CampusConnect</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_members">Members</string>
    <string name="menu_profile">Profile</string>
    <string name="members_screen">Members Screen</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="members_title">Department Members</string>
    <string name="welcome_default">Welcome!</string>
    <string name="dept_full_name">Department of Industrial Management</string>
    <string name="app_welcome_desc">Welcome to the CampusConnect mobile application.</string>
    <string name="logout_confirm_title">Logout</string>
    <string name="logout_confirm_msg">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>